--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "@vue/composition-api": "^1.0.0-beta.11",
     "ant-design-vue": "^1.6.5",
     "core-js": "^3.6.5",
+    "ejs": "^3.1.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@types/ejs": "^3.0.4",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-router": "^4.5.0",
     "@vue/cli-plugin-typescript": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "text-loader": "^0.0.1",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
