--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "ejs": "^3.1.5",
     "vue": "^2.6.11",
+    "vue-grid-layout": "^2.3.8",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
